# UnityChanCMake

./: .gitignore  CMakeLists.txt  README.md  debug.bat
.docker/: AssimpInstall.Dockerfile
assets/TreasureChest/: Material.json
assets/world/: Material.json
dependencies/SDL2/include/SDL2/: SDL_config.h
dependencies/SDL2/lib/cmake/SDL2/: SDL2mainTargets.cmake  SDL2staticTargets.cmake
dependencies/SDL2/lib/pkgconfig/: sdl2.pc
dependencies/assimp/share/assimp/: vcpkg.spdx.json  vcpkg_abi_info.txt
include/: Animation.hpp  Definitions.hpp  Definitions.hpp.in  FBXLoader.hpp  GLUtil.hpp  Game.hpp  Mesh.hpp  Shader.hpp  Skeleton.hpp  Texture.hpp  VertexArray.hpp
include/Actor/: Actor.hpp  Plane.hpp  TestFBXActor.hpp  TreasureChest.hpp  UnityChan.hpp
include/Component/: MeshComponent.hpp  SkinMeshComponent.hpp
shaders/: chest.frag  pbdTest.frag  plane.frag  test.frag  testMesh.vert  testSkin.vert
src/lib/: Animation.cpp  CMakeLists.txt  FBXLoader.cpp  GLUtil.cpp  Game.cpp  Mesh.cpp  Shader.cpp  Skeleton.cpp  Texture.cpp  VertexArray.cpp
src/lib/Actor/: Actor.cpp  Plane.cpp  TestFBXActor.cpp  TreasureChest.cpp  UnityChan.cpp
src/lib/Component/: Component.cpp  MeshComponent.cpp  SkinMeshComponent.cpp
src/main/: main.cpp
